# emacs

./: .gitignore  .gitmodules  dot-emacs  el-navigation.el  espresso.el  ethan-wspace.el  flymake-jslint.el  git-blame.el  go-autocomplete.el  hide-region.el  moz.el  pbcopy.el  php-doc.el  plantuml-mode.el  zencoding-mode.el
cl-lookup/: cl-lookup-glossary.el  cl-lookup-mop.el  cl-lookup.el
cl-lookup/.svn/: entries
cl-lookup/.svn/text-base/: README.svn-base  cl-lookup-clisp.el.svn-base  (+1 more)
confluence-el/: README  confluence-edit.el  confluence.el
dpans2texi-1.05/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  ansicl  ansicl-1  ansicl-10  ansicl-2  ansicl-3  ansicl-4  ansicl-5  ansicl-6  ansicl-7  ansicl-8  ansicl-9  ansicl.texi  config.status  configure  configure.ac  dp.texi  dpans2texi.el  dpans2texi.elc  dph.texi  dpi.texi  temp.texi
geben/: dbgp.el  dbgp.elc  geben.el  geben.elc
js2-mode/: Makefile
js2-mode-read-only/.svn/: all-wcprops  entries
snippets/c++-mode/: foobar.yasnippet  manuel.yasnippet  test.yasnippet  unittest.yasnippet
snippets/c-mode/: $parser->addOption.yasnippet  $parser->addOptionList.yasnippet  AdminController.yasnippet  cc_script.yasnippet  post-object.yasnippet  testsuite.yasnippet  unittest.yasnippet
snippets/markdown-mode/: ghgec.yasnippet  ghgec.yasnippet~
snippets/php-mode/: .yasnippet  cccat.yasnippet  ccprod.yasnippet  cctest.yasnippet  fori.yasnippet
term/: screen-256color.el
vhdl-mode/: ChangeLog  README  site-start.el  vhdl-mode.el  vhdl-mode.info
vhdl-mode/.svn/: entries
(+4 files in other folders)
